--- a/www/Login.html
+++ b/www/Login.html
@@ -19,13 +19,7 @@
 </head>
 <body>
     <widget:myWidget></widget:myWidget>
-
-a
-a
-a
-a
-a
-a
-
+    
+    wasugame !!!!!!!!!!!!!!!
 </body>
 </html>
